fix: extreme gap below first post

--- a/framework/core/less/forum/Post.less
+++ b/framework/core/less/forum/Post.less
@@ -14,6 +14,11 @@
     top: 5px;
     opacity: 0.5;
   }
+
+  // Needed for sidebar `position: sticky` due to its `float`
+  &::after {
+    display: table-cell;
+  }
 }
 
 .Post-header {
